Added App state and synched with localstorage

--- a/src/components/filters/filter.css
+++ b/src/components/filters/filter.css
@@ -35,6 +35,10 @@
     background: #cef197;
 }
 
+.options div span.active{
+    background:#7cb90a;
+}
+
 
 .filterSections .filter label{
     border-bottom: 1px solid #bdbdbd;
