--- a/src/components/filters/filter.css
+++ b/src/components/filters/filter.css
@@ -1,5 +1,6 @@
 .filterSections{
-    max-width:180px;
+    min-width:180px;
+    max-width:200px;
     width:100%;
     padding:20px;
     background:#fff;
