--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,17 @@ body{
   background: #f2f2f2;
 }
 .container{
-  display:flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1440px;
+  width:100%;
+  margin:auto;
+}
+
+@media (min-width: 700px){
+  .container{
+    flex-direction:row;
+    align-items: flex-start;
+  }
 }
