--- a/src/components/card/style.module.css
+++ b/src/components/card/style.module.css
@@ -1,25 +1,28 @@
 .card{
-    min-width:200px;
+   width:100%;
     display: inline-block;
     margin:10px;
+    flex: 1 0 auto;
 }
 .card .body{
     padding:20px;
     border-radius:15px;
     font-size:14px;
     background: #fff;
+    height:90%;
 }
 
 .card .img{
     background: #f2f2f2;
-    height: 100%;
+    height:152px;
     margin: auto;
     display: block;
 }
 
 .card .img img{
-    width:100%;
-    height:auto;
+    height:150px;
+    margin:auto;
+    display: block;
 }
 
 .label{
@@ -42,5 +45,23 @@ ul{
     margin:0;
     padding-left:20px;
 }
-.value{
-}
+
+
+@media (min-width: 700px){
+    .card{
+        width:50%;
+        margin:0;
+        padding:20px;
+        box-sizing: border-box;
+     }
+  }
+
+
+  @media (min-width: 1024px){
+    .card{
+        width:25%;
+        margin:0;
+        padding:20px;
+        box-sizing: border-box;
+     }
+  }
